--- a/src/style.scss
+++ b/src/style.scss
@@ -9,7 +9,7 @@
     --color-1: #323232;
     --color-a: #eec32e; //#bc5ff1;
     --color-b: #fdc400; //#7842e6;
-    --color-c: #fdc400; //#3a1a7b;
+    --color-c: #fe8a39; //#3a1a7b;
 
     --theme-section-bg: var(--color-w);
     --theme-headding-enfasis: var(--color-a);
