--- a/src/templates/_footer.pug
+++ b/src/templates/_footer.pug
@@ -1,5 +1,5 @@
 .o-wrapper
-    div(class="c-contact")
+    div(class="c-contact_footer")
         label(for=""): a(style="color: var(--color-a);" class="js-link" href="mailto:harley.santos.garzon@gmail.com") hello@cubiostudio.com
         label(for=""): a(style="color: var(--color-a)" class="js-link" href="tel:+350 5099 220") 350 5099 220
         hr(style="width: 100%")
