--- a/src/templates/index/_enfoque.pug
+++ b/src/templates/index/_enfoque.pug
@@ -11,14 +11,10 @@ section(id="enfoque" class="o-section" data-theme='gold')
                 h1.c-card_caption-title Estrategia y consultoría
                 figcaption.c-card_caption
                     p(class="c-card_description") Trabajo cercano con el cliente para realizar análisis y definir diagnostico y plan de acción.
-                    div
-                        small
-                            a.js-link(href='mailto:harley.santos.garzon@gmail.com') harley.garzon@cubiostudio.com
+                    a(class="c-btn js-link" data-position='absolute' href='mailto:harley.santos.garzon@gmail.com') hablemos
         figure.c-card.js-scrollUp
             .c-card_content
                 h1.c-card_caption-title Diseño y desarrollo
                 figcaption.c-card_caption
                     p(class="c-card_description") Resolver las necesidades tanto en el diseño, desarrollo y consultoría de la mano con e cliente.
-                    div
-                        small
-                            a.js-link(href='mailto:angela.bohorquez.ramos@gmail.com') angela.bohorquez@cubiostudio.com
+                    a(class="c-btn js-link" data-position='absolute' href='mailto:angela.bohorquez.ramos@gmail.com') hablemos
