--- a/src/templates/index/_works.pug
+++ b/src/templates/index/_works.pug
@@ -1,17 +1,17 @@
-section(id="works" class="o-section js-scrollUp" sttyle="min-height: 50vh")
+section(id="works" class="o-section js-scrollUp" )
     .o-wrapper
-        +headding('h1', 'trabajos, desde 2015 haciendo realidad las ideas de nuestros clientes.', null, null)(class="js-scrollUp")
+        +headding('h1', 'trabajos, desde 2015 haciendo realidad las ideas de nuestros clientes.', 'Proyectos', null)(class="js-scrollUp")
     .o-wrapper
         div(class="blog-slider js-scrollUp")
             .blog-slider__wrp.swiper-wrapper
                 .blog-slider__item.swiper-slide
                     .blog-slider__img: img(src='./images/projects/slider/1.jpg' alt='')
-                    .blog-slider__content: a(class="blog-slider__button js-link" href='orca.html') READ MORE
+                    .blog-slider__content: a(class="blog-slider__button js-link" href='orca.html') Conoce Orca
                 .blog-slider__item.swiper-slide
                     .blog-slider__img: img(src='./images/projects/slider/2.jpg' alt='')
-                    .blog-slider__content: a(class="blog-slider__button js-link" href='#') READ MORE
+                    .blog-slider__content: a(class="blog-slider__button js-link" href='#') Conoce Origen
                 .blog-slider__item.swiper-slide
                     .blog-slider__img: img(src='./images/projects/slider/3.jpg' alt='')
-                    .blog-slider__content: a(class="blog-slider__button js-link" href='#') READ MORE
+                    .blog-slider__content: a(class="blog-slider__button js-link" href='#') Conoce Valientes
             .blog-slider__pagination
             |
