--- a/src/orca.pug
+++ b/src/orca.pug
@@ -2,18 +2,19 @@ include ./templates/_mixin
 <!DOCTYPE html>
 html(lang="en")
     block config
-        -var data = 'lol'
-        -var menu = [ {"link": '#about', "text": 'nosotros'}, {"link": '#works', "text": 'trabajos'}, {"link": '#enfoque', "text": 'enfoque'}, {"link": '#contact', "text": 'contacto'}]
+        -var mainClass = 'on-orca'
+        -var data = 'Proyecto Orca'
+        -var menu = [ {"link": './', "text": 'inicio'}, {"link": '#about', "text": 'nosotros'}, {"link": '#works', "text": 'trabajos'}, {"link": '#enfoque', "text": 'enfoque'}, {"link": '#contact', "text": 'contacto'}]
         include ./templates/_head
     body
-        main(id="app" class="o-main")
+        main(id="app" class="o-main"+' '+mainClass)
             include ./templates/_header
             |
             include ./templates/orca/_welcome
             |
-            include ./templates/index/_founders
+            include ./templates/orca/_record
             |
-            include ./templates/index/_contact
+            include ./templates/orca/_preview
             |
             |
             include ./templates/_footer
