--- a/src/styles/layout/section/_index.scss
+++ b/src/styles/layout/section/_index.scss
@@ -16,15 +16,15 @@
             height: 130vh;
         }
         &#works {
-            min-height: 70vh;
+            min-height: 95vh;
             &::after {
                 background-color: #eec32e;
                 content: '';
                 position: absolute;
                 z-index: -1;
-                top: 80%;
+                bottom: -30%;
                 width: 100%;
-                height: 300px;
+                height: 50vh;
             }
         }
     }
