--- a/src/templates/index/_founders.pug
+++ b/src/templates/index/_founders.pug
@@ -1,42 +1,39 @@
 section(id="founders" class="o-section js-scrollUp" data-theme='light')
     .o-wrapper
-        h2.c-section_headding.js-scrollUp
-            small.c-section_headding-indicator Enfoque, multiples servicios, 2 modalidades de trabajo
-            .c-section_headding-separador
-            span.c-section_headding-enfasis Impulsamos
-            |  transformaciones de la mano con el cliente.
+        +headding('h1', 'Nosotros, apasionados en lo que hacemos.', 'Interesados', 'en ser los mejores para nuestros clientes.')(class="js-scrollUp")
     .o-wrapper
         article.o-article.c-aboutUs
             h2 Pasión
             p(style='max-width: 800px;')
                 | Empresa colombiana creada por una pareja de diseñadores gráficos, creyentes de que emprender no es difícil pero no es una tarea para todos.
-            div(style='max-width: 800px;')
-                h2 Fundadores
+            div(style='max-width: 800px; margin-top: 200px;')
+                h2.u-head_section.js-scrollUp(data-name='Nuestro equipo') Nuestro equipo
     article(class="c-grid" data-grid="founders")
         figure.c-card.js-scrollUp
             .c-card_content
                 figcaption.c-card_caption
-                    h4.c-card_caption-title Harley Santos Garzón
-                    span CTO - Desarrollador frontend
-                    div
-                        small
-                                a.js-link(style='color: var(--color-a)', href='mailto:harley.santos.garzon@gmail.com') harley.garzon@cubiostudio.com
-            img.c-card_image(src='./images/founders/founder_1.jpeg', alt='Harley Santos Garzón')
+                    h4(class="c-card_caption-title" style="margin-bottom: 10px; color: var(--color-a)") Harley Santos Garzón
+                    small CTO - Ingeniero UX
+                    p Productor multimedia, diseñador gráfico y desarrollador Frontend, Músico empirico y bajista de corazón.
+                    br
+                    br
+                    div: small: a.js-link(style='color: var(--color-a)' href='mailto:harley.santos.garzon@gmail.com') harley.garzon@cubiostudio.com
+            img.c-card_image(src='./images/founders/founder_1.jpeg' alt='Harley Santos Garzón')
         figure.c-card.js-scrollUp
-            img.c-card_image(src='./images/founders/founder_2.jpg', alt='Ángela María Bohórquez Ramos')
+            img.c-card_image(src='./images/founders/founder_2.jpg' alt='Ángela María Bohórquez Ramos')
             .c-card_content
                 figcaption.c-card_caption
-                    h4.c-card_caption-title Ángela María Bohórquez Ramos
-                    span Dirección arte.
-                    div
-                        small
-                            a.js-link(href='mailto:angela.bohorquez.ramos@gmail.com') angela.bohorquez@cubiostudio.com
+                    h4(class="c-card_caption-title" style="margin-bottom: 10px; color: var(--color-a)") Ángela María Bohórquez Ramos
+                    small Dirección arte.
+                    p Productora multimedia, diseñadora gráfica. Animalista y amante de los perritos pequeños y blanquitos. Apoya causas ambientales.
+                    br
+                    br
+                    div: small: a.js-link(href='mailto:angela.bohorquez.ramos@gmail.com') angela.bohorquez@cubiostudio.com
         figure.c-card.js-scrollUp
-            img.c-card_image(src='./images/founders/founder_2.jpg', alt='Ángela María Bohórquez Ramos')
+            img.c-card_image(src='./images/founders/founder_3.jpg' alt='Ángela María Bohórquez Ramos')
             .c-card_content
                 figcaption.c-card_caption
-                    h4.c-card_caption-title Ángela María Bohórquez Ramos
-                    span Dirección arte.
-                    div
-                        small
-                            a.js-link(href='mailto:angela.bohorquez.ramos@gmail.com') angela.bohorquez@cubiostudio.com
+                    h4(class="c-card_caption-title" style="margin-bottom: 10px; color: var(--color-a)") David Duque Orozco
+                    small Diseñador UX /UX.
+                    p Diseñador gráfico, motociclista de corazón. Le gusta trasnochar y ver series.
+                    div: small: a.js-link(href='mailto:angela.bohorquez.ramos@gmail.com') david.orozco@cubiostudio.com
