--- a/src/styles/layout/section/_headding.scss
+++ b/src/styles/layout/section/_headding.scss
@@ -12,6 +12,7 @@
     margin-top: 0;
     margin-bottom: 5vh;
     padding-top: 5vh;
+    pointer-events: none;
 
     &-indicator {
         font-size: 16px;
