--- a/src/templates/_header.pug
+++ b/src/templates/_header.pug
@@ -19,4 +19,4 @@ header.o-header
             ul.o-menu_options
                 each item in menu
                     li.o-menu_options-item.js-menu
-                        a(href=item.link)= item.text
+                        a(href=item.link class="o-menu_options-link")= item.text
