--- a/src/templates/index/_founders.pug
+++ b/src/templates/index/_founders.pug
@@ -13,11 +13,9 @@ section(id="founders" class="o-section js-scrollUp" data-theme='light')
             .c-card_content
                 figcaption.c-card_caption
                     h4(class="c-card_caption-title" style="margin-bottom: 10px; color: var(--color-a)") Harley Santos Garzón
-                    small CTO - Ingeniero UX
+                    small CTO - Desarrollador frontend
                     p Productor multimedia, diseñador gráfico y desarrollador Frontend, Músico empirico y bajista de corazón.
-                    br
-                    br
-                    div: small: a.js-link(style='color: var(--color-a)' href='mailto:harley.santos.garzon@gmail.com') harley.garzon@cubiostudio.com
+                    div: small: a(class="c-card_link-email js-mouseStatus js-link" href='mailto:harley.santos.garzon@gmail.com') harley.garzon@cubiostudio.com
             img.c-card_image(src='./images/founders/founder_1.jpeg' alt='Harley Santos Garzón')
         figure.c-card.js-scrollUp
             img.c-card_image(src='./images/founders/founder_2.jpg' alt='Ángela María Bohórquez Ramos')
@@ -26,9 +24,7 @@ section(id="founders" class="o-section js-scrollUp" data-theme='light')
                     h4(class="c-card_caption-title" style="margin-bottom: 10px; color: var(--color-a)") Ángela María Bohórquez Ramos
                     small Dirección arte.
                     p Productora multimedia, diseñadora gráfica. Animalista y amante de los perritos pequeños y blanquitos. Apoya causas ambientales.
-                    br
-                    br
-                    div: small: a.js-link(href='mailto:angela.bohorquez.ramos@gmail.com') angela.bohorquez@cubiostudio.com
+                    div: small: a(class="c-card_link-email js-mouseStatus js-link" href='mailto:angela.bohorquez.ramos@gmail.com') angela.bohorquez@cubiostudio.com
         figure.c-card.js-scrollUp
             img.c-card_image(src='./images/founders/founder_3.jpg' alt='Ángela María Bohórquez Ramos')
             .c-card_content
@@ -36,4 +32,4 @@ section(id="founders" class="o-section js-scrollUp" data-theme='light')
                     h4(class="c-card_caption-title" style="margin-bottom: 10px; color: var(--color-a)") David Duque Orozco
                     small Diseñador UX /UX.
                     p Diseñador gráfico, motociclista de corazón. Le gusta trasnochar y ver series.
-                    div: small: a.js-link(href='mailto:angela.bohorquez.ramos@gmail.com') david.orozco@cubiostudio.com
+                    div: small: a(class="c-card_link-email js-mouseStatus js-link" href='mailto:angela.bohorquez.ramos@gmail.com') david.orozco@cubiostudio.com
