--- a/src/templates/index/_works.pug
+++ b/src/templates/index/_works.pug
@@ -2,7 +2,7 @@ section(id="works" class="o-section js-scrollUp" )
     .o-wrapper
         +headding('h1', 'trabajos, desde 2015 haciendo realidad las ideas de nuestros clientes.', 'Proyectos', null)(class="js-scrollUp")
     .o-wrapper
-        div(class="blog-slider js-scrollUp")
+        div(class="blog-slider js-mouseStatus")
             .blog-slider__wrp.swiper-wrapper
                 .blog-slider__item.swiper-slide
                     .blog-slider__img: img(src='./images/projects/slider/1.jpg' alt='')
