--- a/src/styles/_specificity.scss
+++ b/src/styles/_specificity.scss
@@ -79,3 +79,12 @@
         }
     }
 }
+
+.on-leave {
+    transform: translateY(0px);
+    transition: all 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
+}
+.on-hover {
+    transform: translateY(-10px) !important;
+    transition: all 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
+}
