--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import './buttons';
+@import './slider';
 
 .c- {
     &main-title,
@@ -46,9 +47,9 @@
         &_image {
             width: 100%;
             height: 100%;
-            max-width: 330px;
+            max-width: 270px;
             object-fit: cover;
-            object-position: left;
+            object-position: center;
             position: relative;
             z-index: 0;
         }
@@ -66,6 +67,11 @@
         &_caption {
             &-title {
                 // margin: 0;
+            }
+        }
+        &_link {
+            &-email {
+                color: var(--color-a);
             }
         }
         &::before {
