--- a/src/styles/layout/header/_index.scss
+++ b/src/styles/layout/header/_index.scss
@@ -10,8 +10,8 @@
         transform: translateX(-50%);
         padding: 1rem 6vw;
         background-color: var(--theme-header-bg);
-        // background-color: rgba(255, 255, 255, 0.9);
-        box-shadow: 0px 10px 11px rgba(0, 0, 0, 0.11);
+        background-color: rgba(255, 255, 255, 0.4);
+        // box-shadow: 0px 10px 11px rgba(0, 0, 0, 0.11);
         &_wrapper {
             max-width: 1920px;
             margin: auto;
