--- a/src/styles/utilities/_index.scss
+++ b/src/styles/utilities/_index.scss
@@ -35,6 +35,7 @@
             font-size: 200%;
             color: rgb(100, 100, 100);
             text-align: center;
+            pointer-events: none;
         }
         &:hover {
             text-shadow: 0 3px 0 var(--color-1);
