--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -1,6 +1,7 @@
 .blog-slider {
     width: 100%;
     position: relative;
+    z-index: 1;
     max-width: 1200px;
     margin: auto;
     background: #fff;
