--- a/src/styles/layout/header/_index.scss
+++ b/src/styles/layout/header/_index.scss
@@ -11,6 +11,7 @@
         padding: 1rem 6vw;
         background-color: var(--theme-header-bg);
         background-color: rgba(255, 255, 255, 0.4);
+
         // box-shadow: 0px 10px 11px rgba(0, 0, 0, 0.11);
         &_wrapper {
             max-width: 1920px;
@@ -23,6 +24,12 @@
             background-color: transparent;
             min-height: 3rem;
             border: none;
+        }
+        &[data-over='on-gold'] {
+            .o-menu_options-link {
+                color: #323232;
+                transition: color 0.5s;
+            }
         }
     }
 }
