--- a/src/templates/_header.pug
+++ b/src/templates/_header.pug
@@ -1,4 +1,4 @@
-header.o-header
+header(class="o-header" id="js_o_header")
     div.o-header_wrapper
         button.o-header_btn.o-logo.js-logo
             svg#svg-logo.svg-logo(version='1.1' xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 57.2 52.7' style='enable-background:new 0 0 57.2 52.7;', xml:space='preserve')
