--- a/src/templates/index/_contact.pug
+++ b/src/templates/index/_contact.pug
@@ -1,4 +1,4 @@
-section(id="contact" class="o-section js-scrollUp" data-theme='light')
+section(id="contact" class="o-section js-scrollUp" data-theme='dark')
     div(class="o-wrapper")
         h2(class="u-head_section" data-name='Contacto') Contacto
     .o-wrapper(style="margin-top: 200px")
