--- a/src/templates/index/_works.pug
+++ b/src/templates/index/_works.pug
@@ -1,4 +1,4 @@
-section(id="works" class="o-section js-scrollUp" )
+section(id="works" class="o-section js-scrollUp" data-theme="light")
     .o-wrapper
         +headding('h1', 'trabajos, desde 2015 haciendo realidad las ideas de nuestros clientes.', 'Proyectos', null)(class="js-scrollUp")
     .o-wrapper
