--- a/src/styles/layout/section/_index.scss
+++ b/src/styles/layout/section/_index.scss
@@ -4,6 +4,7 @@
     &section {
         width: 100%;
         min-height: 100vh;
+        position: relative;
         background-color: var(--theme-section-bg);
         transition: transform 0.3s ease-in-out;
         &:first-of-type {
@@ -21,7 +22,7 @@
                 background-color: #eec32e;
                 content: '';
                 position: absolute;
-                z-index: -1;
+                z-index: 0;
                 bottom: -30%;
                 width: 100%;
                 height: 50vh;
