--- a/src/templates/index/_welcome.pug
+++ b/src/templates/index/_welcome.pug
@@ -1,5 +1,5 @@
 section.o-section(data-theme='gray')
     .o-wrapper
-        +headding('h1', 'Somos, un estudio de diseño Colombiano.', 'Creamos', 'productos digitales y marcas del futuro.')(class="js-scrollUp")
+        +headding('h1', 'Somos, un estudio de diseño Colombiano.', 'Creamos', 'productos digitales y marcas del futuro.')
     .o-wrapper: +chevron()
     +mega_headding('CubioStudio')
