--- a/src/index.pug
+++ b/src/index.pug
@@ -36,6 +36,10 @@ html(lang="en")
                     effect: 'fade',
                     loop: true,
                     mousewheel: false,
+                    navigation: {
+                        nextEl: '.swiper-button-next',
+                        prevEl: '.swiper-button-prev',
+                    },
                     autoplay: {
                         delay: 5000,
                         disableOnInteraction: false,
