--- a/src/templates/index/_enfoque.pug
+++ b/src/templates/index/_enfoque.pug
@@ -8,7 +8,7 @@ section(id="enfoque" class="o-section" data-theme='gold')
     article(class="c-grid" data-grid="card")
         div(class="c-card js-scrollUp")
             .c-card_content
-                h1.c-card_caption-title Estrategia y consultoría
+                h1.c-card_caption-title Estratégia y consultoría
                 figcaption.c-card_caption
                     p(class="c-card_description") Trabajo cercano con el cliente para realizar análisis y definir diagnostico y plan de acción.
                     a(class="c-btn js-link" data-position='absolute' href='mailto:harley.santos.garzon@gmail.com') hablemos
