--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -3,11 +3,17 @@
 @import './slider';
 
 .c- {
-    &main-title,
-    &main-message {
-        width: 90vw;
-        max-width: 1100px;
-        user-select: none;
+    &welcome {
+        &_message {
+            width: 100%;
+            max-width: 590px;
+            user-select: none;
+            margin: 0;
+            font-size: 1.6rem;
+        }
+        &_details {
+            font-size: 1.2rem;
+        }
     }
     &main-message {
         padding: 2vw 0;
@@ -21,6 +27,36 @@
     &contact_footer {
         display: grid;
         grid-gap: 0.5em;
+        &_item {
+            &:nth-child(4) {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                & *:last-child {
+                    padding-top: 0.5rem;
+                }
+            }
+            &:nth-child(1) {
+                font-size: 4vmin;
+            }
+            &:nth-child(1),
+            &:nth-child(3),
+            &:nth-child(2) {
+                display: flex;
+                justify-content: center;
+            }
+            &:nth-child(3) {
+                justify-content: space-around;
+                max-width: 400px;
+                margin: auto;
+                width: 100%;
+                padding-top: 2vw;
+            }
+        }
+        a {
+            color: var(--color-a);
+            text-decoration: none;
+        }
     }
 }
 
@@ -122,7 +158,7 @@
 .c-multimedia {
     width: 100%;
     height: 0;
-    padding-top: 50%;
+    padding-top: 56%;
     position: relative;
     margin: auto;
     z-index: 2;
@@ -140,11 +176,11 @@
             position: absolute;
             width: 106%;
             left: -3%;
-            bottom: -150px;
-            height: 190px;
-            background-color: #ffffff;
+            bottom: -80px;
+            height: 110px;
+            background-color: var(--color-0);
             z-index: -1;
-            box-shadow: 0px -12px 12px #ffffff, -1px -3px 3px #ffffffb5, 0px 10px 12px -4px #e5e5e5;
+            box-shadow: 0px -9px 0px var(--color-0), 1px 15px 9px -12px #49494942, 0px 3px 6px -10px #5b5b5b30;
         }
     }
 }
