--- a/src/styles/layout/section/_headding.scss
+++ b/src/styles/layout/section/_headding.scss
@@ -6,7 +6,7 @@
     font-family: var(--font-medium);
     font-size: 74px;
     letter-spacing: -3.5px;
-    padding: 0 100px;
+    padding: 0 100px 0 0;
     position: relative;
     z-index: 1;
     margin-top: 0;
