--- a/src/styles/layout/section/_index.scss
+++ b/src/styles/layout/section/_index.scss
@@ -18,6 +18,7 @@
         }
         &#works {
             min-height: 95vh;
+            padding-bottom: 4rem;
             &::after {
                 background-color: #eec32e;
                 content: '';
@@ -27,6 +28,10 @@
                 width: 100%;
                 height: 50vh;
             }
+        }
+        &#contact {
+            padding-top: 100px;
+            padding-bottom: 50px;
         }
     }
 }
