--- a/src/templates/_footer.pug
+++ b/src/templates/_footer.pug
@@ -1,8 +1,15 @@
 footer(class="o-footer")
     .o-wrapper
         div(class="c-contact_footer")
-            label(for=""): a(style="color: var(--color-a);" class="js-link" href="mailto:harley.santos.garzon@gmail.com") hello@cubiostudio.com
-            label(for=""): a(style="color: var(--color-a)" class="js-link" href="tel:+350 5099 220") 350 5099 220
-            hr(style="width: 100%")
-            label(for="") Bogotá D.C, Colombia
-            small &copy; 2019 cubio studio
+            div(class="c-contact_footer_item")
+                a(class="js-link" href="mailto:harley.santos.garzon@gmail.com") hello@cubiostudio.com
+            div(class="c-contact_footer_item")
+                label(for=""): a(class="js-link" href="tel:+350 5099 220") 350 5099 220
+            div(class="c-contact_footer_item")
+                label(for=""): a(class="js-link" taget="_blank" href="https://www.instagram.com/cubioStudio/") instagram
+                label(for=""): a(class="js-link" taget="_blank" href="https://www.behance.net/HarleySantosGarzon") behance
+                label(for=""): a(class="js-link" taget="_blank" href="https://github.com/HarleySG/") github
+            div(class="c-contact_footer_item")
+                hr(style="width: 100%")
+                label(for="") Bogotá D.C, Colombia
+                small &copy; 2019 cubio studio
