--- a/src/templates/orca/_welcome.pug
+++ b/src/templates/orca/_welcome.pug
@@ -1,23 +1,21 @@
-section.o-section(data-theme='gray')
+section.o-section(data-theme='gray' id="welcome")
     .o-wrapper
-        +headding('h1', 'Somos, un estudio de diseño Colombiano.', 'Creamos', 'productos digitales y marcas del futuro.')(class="js-scrollUp")
+        +headding('h1', null, 'Proyecto', 'orca')(class="js-scrollUp")
+        blockquote(class="c-welcome_message")
+            p.
+                Rediseño de marca, estrategía comunicación,
+                plan de social media, packaging discografía y
+                elementos de mercadeo.
+            div(class="c-welcome_details")
+                div
+                    strong Industria: 
+                    span Musical
+                div
+                    strong Año: 
+                    span 2015
     +mega_headding('CubioStudio')
-    .o-wrapper
+    .o-wrapper.cont-multimedia
         div(class="c-multimedia" data-square='multimedia' data-shadow='true')
             video(controls class="c-multimedia_video" poster='./images/projects/slider/1.jpg')
-                source(src="unit_unit/module_module/assets/videos/audioname.mp4" type="video/mp4")
+                source(src="multimedia/videos/orca/reel.mp4" type="video/mp4")
                 | Your browser does not support the video element.
-        //- div(class="blog-slider")
-            .blog-slider__wrp.swiper-wrapper
-                .blog-slider__item.swiper-slide
-                    .blog-slider__img
-                        //- img(src='./images/projects/slider/1.jpg' alt='')
-                    .blog-slider__content: a(class="blog-slider__button js-link" href='orca.html') READ MORE
-                .blog-slider__item.swiper-slide
-                    .blog-slider__img: img(src='./images/projects/slider/2.jpg' alt='')
-                    .blog-slider__content: a(class="blog-slider__button js-link" href='#') READ MORE
-                .blog-slider__item.swiper-slide
-                    .blog-slider__img: img(src='./images/projects/slider/3.jpg' alt='')
-                    .blog-slider__content: a(class="blog-slider__button js-link" href='#') READ MORE
-            .blog-slider__pagination
-            |
