--- a/src/orca.pug
+++ b/src/orca.pug
@@ -16,6 +16,13 @@ html(lang="en")
             |
             include ./templates/orca/_preview
             |
+            include ./templates/orca/_proposal
+            |
+            include ./templates/orca/_objectives
+            |
+            include ./templates/orca/_isotipo
+            |
+            include ./templates/orca/_tipografia
             |
             include ./templates/_footer
             |
