--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,9 @@
     --color-b: #fdc400; //#7842e6;
     --color-c: #fe8a39; //#3a1a7b;
 
+    --theme-header-bg: rgba(255, 255, 255, 0.4);
+    --theme-menu-link-color: var(--color-a);
+
     --theme-section-bg: var(--color-w);
     --theme-headding-enfasis: var(--color-a);
     --theme-headding-separador: var(--color-a);
