--- a/src/styles/_specificity.scss
+++ b/src/styles/_specificity.scss
@@ -13,6 +13,8 @@
         --theme-card-before-border-bg: var(--color-c);
         --theme-mega-headding-color: #f4c82a;
         --theme-mega-headding-shadow: 30, 30, 30;
+        --theme-header-bg: rgba(0, 0, 0, 0.2);
+        --theme-menu-link-color: var(--color-1);
     }
     &[data-theme='light'] {
         --theme-section-bg: var(--color-w);
@@ -97,7 +99,71 @@
             margin-top: 100px;
         }
     }
+    #record {
+        min-height: 80vh;
+    }
+    #proposal {
+        position: relative;
+        img {
+            display: flex;
+        }
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-image: url(images/projects/orca/orca_proposal_bg.png);
+            background-size: auto 66%;
+            background-repeat: no-repeat;
+            background-position: 50% center;
+            opacity: 0.6;
+        }
+    }
+    #objectives {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/orca/orca_proposito_bg.png);
+            background-size: auto 36%;
+            background-position: 50% center;
+            opacity: 0.25;
+        }
+    }
+    #isotipo {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/orca/orca_isotipo_bg.png);
+            background-size: auto 44%;
+            background-position: 78% 20%;
+        }
+    }
+    #tipografia {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/orca/orca_tipografia_bg.png);
+            background-size: auto 34%;
+            background-position: 88% center;
+        }
+    }
     .o-section {
+        img {
+            user-select: none;
+            pointer-events: none;
+        }
         &:first-of-type {
             .o-wrapper {
                 margin-top: 18vh;
