--- a/src/styles/layout/header/_index.scss
+++ b/src/styles/layout/header/_index.scss
@@ -10,7 +10,6 @@
         transform: translateX(-50%);
         padding: 1rem 6vw;
         background-color: var(--theme-header-bg);
-        background-color: rgba(255, 255, 255, 0.4);
 
         // box-shadow: 0px 10px 11px rgba(0, 0, 0, 0.11);
         &_wrapper {
@@ -27,8 +26,12 @@
         }
         &[data-over='on-gold'] {
             .o-menu_options-link {
-                color: #323232;
-                transition: color 0.5s;
+                color: var(--color-1);
+            }
+        }
+        &[data-over='on-dark'] {
+            .o-menu_options-link {
+                color: var(--color-w);
             }
         }
     }
