--- a/src/templates/orca/_record.pug
+++ b/src/templates/orca/_record.pug
@@ -1,1 +1,7 @@
 section.o-section(data-theme='light' id="record")
+    .o-wrapper
+        .cont-multimedia
+            div(class="c-multimedia" data-square='multimedia' data-shadow='true')
+                video(controls class="c-multimedia_video" poster='./images/projects/slider/1.jpg')
+                    source(src="multimedia/videos/orca/reel.mp4" type="video/mp4")
+                    | Your browser does not support the video element.
