--- a/src/templates/orca/_welcome.pug
+++ b/src/templates/orca/_welcome.pug
@@ -13,9 +13,4 @@ section.o-section(data-theme='gray' id="welcome")
                 div
                     strong Año: 
                     span 2015
-    +mega_headding('CubioStudio')
-    .o-wrapper.cont-multimedia
-        div(class="c-multimedia" data-square='multimedia' data-shadow='true')
-            video(controls class="c-multimedia_video" poster='./images/projects/slider/1.jpg')
-                source(src="multimedia/videos/orca/reel.mp4" type="video/mp4")
-                | Your browser does not support the video element.
+    +mega_headding('ProyectoOrca')
