--- a/src/templates/orca/_record.pug
+++ b/src/templates/orca/_record.pug
@@ -1,4 +1,4 @@
-section.o-section(data-theme='light' id="record")
+section.o-section(data-theme='gray' id="record")
     .o-wrapper
         .cont-multimedia
             div(class="c-multimedia" data-square='multimedia' data-shadow='true')
