--- a/src/styles/layout/section/_headding.scss
+++ b/src/styles/layout/section/_headding.scss
@@ -18,6 +18,7 @@
         font-size: 16px;
         letter-spacing: 0;
         font-family: var(--font-medium);
+        color: var(--theme-headding-indicator);
     }
     &-enfasis {
         color: var(--theme-headding-enfasis);
