--- a/src/templates/index/_works.pug
+++ b/src/templates/index/_works.pug
@@ -11,6 +11,9 @@ section(id="works" class="o-section" data-theme="light")
                     .blog-slider__img: img(src='./images/projects/slider/2.jpg' alt='')
                     .blog-slider__content: a(class="blog-slider__button js-link" href='origen.html') Conoce Origen
                 .blog-slider__item.swiper-slide
+                    .blog-slider__img: img(src='./images/projects/slider/4.jpg' alt='')
+                    .blog-slider__content: a(class="blog-slider__button js-link" href='betsknate.html') Conoce Betsknate
+                .blog-slider__item.swiper-slide
                     .blog-slider__img: img(src='./images/projects/slider/3.jpg' alt='')
                     .blog-slider__content: a(class="blog-slider__button js-link" href='valientes.html') Conoce Valientes
             .blog-slider__pagination
