--- a/src/styles/_specificity.scss
+++ b/src/styles/_specificity.scss
@@ -98,6 +98,9 @@ html {
 }
 
 .on-orca {
+    .o-menu {
+        max-width: 600px;
+    }
     #welcome {
         .cont-multimedia {
             margin-top: 100px;
@@ -159,6 +162,98 @@ html {
             height: 100%;
             background-repeat: no-repeat;
             background-image: url(images/projects/orca/orca_tipografia_bg.png);
+            background-size: auto 34%;
+            background-position: 88% center;
+        }
+    }
+    .o-section {
+        img {
+            user-select: none;
+            pointer-events: none;
+        }
+        &:first-of-type {
+            .o-wrapper {
+                margin-top: 18vh;
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
+}
+
+.on-betsknate {
+    .o-menu {
+        max-width: 600px;
+    }
+    #welcome {
+        .cont-multimedia {
+            margin-top: 100px;
+        }
+    }
+    #record {
+        min-height: 75vh;
+    }
+    #preview {
+        position: relative;
+        img {
+            display: flex;
+        }
+        &:before,
+        &:after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            top: 0;
+        }
+        &:after {
+            background-image: url(images/projects/betsknate/betsknate_proposal_bg_2.png);
+            background-size: auto 66%;
+            background-position: 80% 90%;
+        }
+        &:before {
+            background-image: url(images/projects/betsknate/betsknate_proposal_bg.png);
+            background-size: auto 66%;
+            background-position: 50% center;
+            opacity: 0.6;
+        }
+    }
+    #colors {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/betsknate/betsknate_colores_bg.png);
+            background-size: auto 66%;
+            background-position: -30% center;
+        }
+    }
+    #elements {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/betsknate/betsknate_elementos_bg.png);
+            background-size: auto 23%;
+            background-position: 76% 26%;
+        }
+    }
+    #aplicaciones {
+        position: relative;
+        &:before {
+            // content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: url(images/projects/betsknate/betsknate_aplicaciones.png);
             background-size: auto 34%;
             background-position: 88% center;
         }
