--- a/src/templates/index/_enfoque.pug
+++ b/src/templates/index/_enfoque.pug
@@ -1,18 +1,14 @@
 section(id="enfoque" class="o-section" data-theme='gold')
     .o-wrapper
-        h2.c-section_headding.js-scrollUp
-            small.c-section_headding-indicator Enfoque, multiples servicios, 2 modalidades de trabajo
-            .c-section_headding-separador
-            span.c-section_headding-enfasis Impulsamos
-            |  transformaciones de la mano con el cliente.
+        +headding('h1', 'Enfoque, multiples servicios, 2 modalidades de trabajo.', 'Impulsamos', ' transformaciones de la mano con el cliente.')(class="")
     article(class="c-grid" data-grid="card")
-        div(class="c-card js-scrollUp")
+        div(class="c-card js-intersector")
             .c-card_content
                 h1.c-card_caption-title Estratégia y consultoría
                 figcaption.c-card_caption
                     p(class="c-card_description") Trabajo cercano con el cliente para realizar análisis y definir diagnostico y plan de acción.
                     a(class="c-btn js-link" data-position='absolute' href='mailto:harley.santos.garzon@gmail.com') hablemos
-        figure.c-card.js-scrollUp
+        figure.c-card.js-intersector
             .c-card_content
                 h1.c-card_caption-title Diseño y desarrollo
                 figcaption.c-card_caption
