--- a/src/styles/_specificity.scss
+++ b/src/styles/_specificity.scss
@@ -85,16 +85,56 @@ html {
 
 .on-leave {
     transform: translateY(0px);
-    transition: all 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
+    transition: transform 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
 }
 
 // .js-scrollUp {
-//     transform: translateY(50px) !important;
-//     transition: all 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
+// transition: all 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
 // }
+
+[data-view] {
+}
+[data-view='fade-inDown'] {
+    transition: opacity 0.5s cubic-bezier(0.37, 0.01, 0, 0.98) 0.3s, transform 0.6s cubic-bezier(0.37, 0.01, 0, 0.98) 0.4s;
+    &.c-section_headding {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    &.blog-slider {
+        opacity: 1;
+        // transition: opacity 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
+    }
+    &.c-card {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+// [data-view='fade-inUp'] { }
+[data-view='fade-outDown'] {
+    transition: opacity 0.5s cubic-bezier(0.37, 0.01, 0, 0.98) 0.3s, transform 0.4s cubic-bezier(0.37, 0.01, 0, 0.98) 0.3s;
+    &.blog-slider {
+        opacity: 0;
+    }
+    &.c-section_headding {
+        transform: translateX(100px);
+        opacity: 0;
+    }
+    &.c-card {
+        opacity: 0;
+        &:nth-child(even) {
+            transform: translateX(-100px);
+        }
+        &:nth-child(odd) {
+            transform: translateX(+100px);
+        }
+    }
+    // animation: view_fadeoutDown 1.5s cubic-bezier(0.37, 0.01, 0, 0.98);
+}
+// [data-view='fade-outUp'] { }
+
 .on-hover {
     transform: translateY(-10px) !important;
-    transition: all 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
+    transition: transform 0.5s cubic-bezier(0.37, 0.01, 0, 0.98);
 }
 
 .on-orca {
