--- a/src/templates/index/_founders.pug
+++ b/src/templates/index/_founders.pug
@@ -1,6 +1,6 @@
 section(id="founders" class="o-section js-scrollUp" data-theme='light')
     .o-wrapper
-        +headding('h1', 'Nosotros, apasionados en lo que hacemos.', 'Interesados', 'en ser los mejores para nuestros clientes.')(class="js-scrollUp")
+        +headding('h1', 'Nosotros, apasionados en lo que hacemos.', 'Interesados', 'en ser los mejores para nuestros clientes.')(class="js-intersector")
     .o-wrapper
         article.o-article.c-aboutUs
             h2 Pasión
@@ -9,7 +9,7 @@ section(id="founders" class="o-section js-scrollUp" data-theme='light')
             div(style='max-width: 800px; margin-top: 200px;')
                 h2.u-head_section.js-scrollUp(data-name='Nuestro equipo') Nuestro equipo
     article(class="c-grid" data-grid="founders")
-        figure.c-card.js-scrollUp
+        figure.c-card.js-intersector
             .c-card_content
                 figcaption.c-card_caption
                     h4(class="c-card_caption-title" style="margin-bottom: 10px; color: var(--color-a)") Harley Santos Garzón
@@ -17,7 +17,7 @@ section(id="founders" class="o-section js-scrollUp" data-theme='light')
                     p Productor multimedia, diseñador gráfico y desarrollador Frontend, Músico empirico y bajista de corazón.
                     div: small: a(class="c-card_link-email js-mouseStatus js-link" href='mailto:harley.santos.garzon@gmail.com') harley.garzon@cubiostudio.com
             img.c-card_image(src='./images/founders/founder_1.jpeg' alt='Harley Santos Garzón')
-        figure.c-card.js-scrollUp
+        figure.c-card.js-intersector
             img.c-card_image(src='./images/founders/founder_2.jpg' alt='Ángela María Bohórquez Ramos')
             .c-card_content
                 figcaption.c-card_caption
@@ -25,7 +25,7 @@ section(id="founders" class="o-section js-scrollUp" data-theme='light')
                     small Dirección arte.
                     p Productora multimedia, diseñadora gráfica. Animalista y amante de los perritos pequeños y blanquitos. Apoya causas ambientales.
                     div: small: a(class="c-card_link-email js-mouseStatus js-link" href='mailto:angela.bohorquez.ramos@gmail.com') angela.bohorquez@cubiostudio.com
-        figure.c-card.js-scrollUp
+        figure.c-card.js-intersector
             img.c-card_image(src='./images/founders/founder_3.jpg' alt='Ángela María Bohórquez Ramos')
             .c-card_content
                 figcaption.c-card_caption
